.archive/games/minecraft/survival/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minecraft-survival-map
spec:
  hostnames: ["survival-map.vzkn.eu"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: minecraft-survival-map
          namespace: games
          port: 8100
